<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_bg"
    tools:context=".Signup">

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="172dp"
        android:layout_height="69dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roundedodin"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/emailId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/ic_username_icon"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="#00ACEE"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/emailId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/ic_icon_material_email"
        android:textColorHint="@color/Twit"
        android:padding="16dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/email"
        android:inputType="text"
        android:textAlignment="center"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextFields,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/ic_icon_awesome_lock"
        android:fontFamily="sans-serif-light"
        android:hint="@string/enter_password"
        android:inputType="text"
        android:padding="17dp"
        android:textAlignment="center"
        android:textColorHint="@color/Twit"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/retypePass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextFields" />

    <EditText
        android:id="@+id/retypePass"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:background="@drawable/input_box"
        android:drawableStart="@drawable/ic_icon_awesome_lock"
        android:fontFamily="sans-serif-light"
        android:hint="@string/retype_password"
        android:inputType="text"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColorHint="@color/Twit"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextFields" />

    <Button
        android:id="@+id/signup"
        android:layout_width="192dp"
        android:layout_height="56dp"
        android:background="@drawable/button_style"
        android:fontFamily="monospace"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypePass"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/loginscreen"
        android:layout_width="297dp"
        android:layout_height="49dp"
        android:text="@string/or"
        android:textColor="@color/Twit"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="84dp" />


</androidx.constraintlayout.widget.ConstraintLayout>